static_library("Tempandblood2") {
    sources = [
        "iot_cloud_oc.c",
        "src/wifi_connect.c",
        "src/oc_mqtt.c",
        "src/oc_mqtt_profile_package.c",
        "src/E53_IA1.c",
        "max30102_app.c",
        "max30102_driver.c",
        "gps.c"
    ]
    
    cflags = [ "-Wno-unused-variable" ]
    cflags += [ "-Wno-unused-but-set-variable" ]
    cflags += ["-fstack-protector-all"]
    
    include_dirs = [
        ".",
        "//utils/native/lite/include",
        "//kernel/liteos_m/components/cmsis/2.0",
        "//base/iot_hardware/interfaces/kits/wifiiot_lite",
        "//foundation/communication/interfaces/kits/wifi_lite/wifiservice",
        "//vendor/hisi/hi3861/hi3861/third_party/lwip_sack/include/",
        "//vendor/hisi/hi3861/hi3861/third_party/paho_mqtt",
        "//third_party/cJSON",
        "//third_party/paho_mqtt/MQTTPacket/src",
        "//third_party/paho_mqtt/MQTTClient-C/src",
        "//third_party/paho_mqtt/MQTTClient-C/src/liteOS",
        "//third_party/paho_mqtt/MQTTPacket/samples",
        "include"
    ]

    deps = [ 
             "//third_party/paho_mqtt:pahomqtt_static",
    ]

}
